--- a/main.css
+++ b/main.css
@@ -2,3 +2,8 @@ model-viewer {
     width: 100vw; /* 100% of the viewport width */
     height: 100vh; /* 100% of the viewport height */
 }
+
+div.HotspotAnnotation{    font-family: 'Chakra Petch', sans-serif;background: yellow;font-size: 2rem;border:1px dashed}
+
+body {  background: linear-gradient(to bottom, yellow, black 70%);
+}
